baml_language/crates/baml_tests/snapshots/parser_stress/baml_tests__parser_stress__02_parser__deeply_nested.snap
---
source: target/debug/build/baml_tests-ddc6647912a5d7c4/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Level5"
    L_BRACE "{"
    FIELD
      WORD "value"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Level4"
    L_BRACE "{"
    FIELD
      WORD "field"
      TYPE_EXPR "Level5"
        WORD "Level5"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Level3"
    L_BRACE "{"
    FIELD
      WORD "field"
      TYPE_EXPR "Level4"
        WORD "Level4"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Level2"
    L_BRACE "{"
    FIELD
      WORD "field"
      TYPE_EXPR "Level3"
        WORD "Level3"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Level1"
    L_BRACE "{"
    FIELD
      WORD "field"
      TYPE_EXPR "Level2"
        WORD "Level2"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "DeepExpression"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT
          KW_RETURN "return"
          PAREN_EXPR
            L_PAREN "("
            PAREN_EXPR
              L_PAREN "("
              BINARY_EXPR
                PAREN_EXPR
                  L_PAREN "("
                  BINARY_EXPR
                    PAREN_EXPR
                      L_PAREN "("
                      BINARY_EXPR
                        PAREN_EXPR
                          L_PAREN "("
                          BINARY_EXPR
                            PAREN_EXPR
                              L_PAREN "("
                              BINARY_EXPR
                                PAREN_EXPR
                                  L_PAREN "("
                                  BINARY_EXPR
                                    PAREN_EXPR
                                      L_PAREN "("
                                      BINARY_EXPR
                                        PAREN_EXPR
                                          L_PAREN "("
                                          BINARY_EXPR
                                            PAREN_EXPR
                                              L_PAREN "("
                                              BINARY_EXPR "1 + 2"
                                                INTEGER_LITERAL "1"
                                                PLUS "+"
                                                INTEGER_LITERAL "2"
                                              R_PAREN ")"
                                            STAR "*"
                                            INTEGER_LITERAL "3"
                                          R_PAREN ")"
                                        MINUS "-"
                                        INTEGER_LITERAL "4"
                                      R_PAREN ")"
                                    SLASH "/"
                                    INTEGER_LITERAL "5"
                                  R_PAREN ")"
                                PLUS "+"
                                INTEGER_LITERAL "6"
                              R_PAREN ")"
                            STAR "*"
                            INTEGER_LITERAL "7"
                          R_PAREN ")"
                        MINUS "-"
                        INTEGER_LITERAL "8"
                      R_PAREN ")"
                    SLASH "/"
                    INTEGER_LITERAL "9"
                  R_PAREN ")"
                PLUS "+"
                INTEGER_LITERAL "10"
              R_PAREN ")"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "ComplexType"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      WORD "map"
      TYPE_ARGS
        LESS "<"
        TYPE_EXPR "string"
          WORD "string"
        COMMA ","
        TYPE_EXPR
          WORD "map"
          TYPE_ARGS
            LESS "<"
            TYPE_EXPR "string"
              WORD "string"
            COMMA ","
            TYPE_EXPR
              WORD "map"
              TYPE_ARGS
                LESS "<"
                TYPE_EXPR "string"
                  WORD "string"
                COMMA ","
                TYPE_EXPR "int[]?"
                  WORD "int"
                  L_BRACKET "["
                  R_BRACKET "]"
                  QUESTION "?"
  GREATER_GREATER ">>"
  GREATER ">"
  L_BRACE "{"
  KW_RETURN "return"
  L_BRACE "{"
  R_BRACE "}"
  R_BRACE "}"

=== ERRORS ===
Error: Expected '>', found '>>'
    ╭─[ 0:28:69 ]
    │
 28 │ function ComplexType() -> map<string, map<string, map<string, int[]?>>> {
    │                                                                     ─┬  
    │                                                                      ╰── Expected '>', found '>>'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected '>', found '>>'
    ╭─[ 0:28:69 ]
    │
 28 │ function ComplexType() -> map<string, map<string, map<string, int[]?>>> {
    │                                                                     ─┬  
    │                                                                      ╰── Expected '>', found '>>'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected '>', found '>>'
    ╭─[ 0:28:69 ]
    │
 28 │ function ComplexType() -> map<string, map<string, map<string, int[]?>>> {
    │                                                                     ─┬  
    │                                                                      ╰── Expected '>', found '>>'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected function body, found '>>'
    ╭─[ 0:28:69 ]
    │
 28 │ function ComplexType() -> map<string, map<string, map<string, int[]?>>> {
    │                                                                     ─┬  
    │                                                                      ╰── Expected function body, found '>>'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found '>>'
    ╭─[ 0:28:69 ]
    │
 28 │ function ComplexType() -> map<string, map<string, map<string, int[]?>>> {
    │                                                                     ─┬  
    │                                                                      ╰── Expected top-level declaration, found '>>'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found '>'
    ╭─[ 0:28:71 ]
    │
 28 │ function ComplexType() -> map<string, map<string, map<string, int[]?>>> {
    │                                                                       ┬  
    │                                                                       ╰── Expected top-level declaration, found '>'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found '{'
    ╭─[ 0:28:73 ]
    │
 28 │ function ComplexType() -> map<string, map<string, map<string, int[]?>>> {
    │                                                                         ┬  
    │                                                                         ╰── Expected top-level declaration, found '{'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found return
    ╭─[ 0:30:3 ]
    │
 30 │   return {}
    │   ───┬──  
    │      ╰──── Expected top-level declaration, found return
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found '{'
    ╭─[ 0:30:10 ]
    │
 30 │   return {}
    │          ┬  
    │          ╰── Expected top-level declaration, found '{'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found '}'
    ╭─[ 0:30:11 ]
    │
 30 │   return {}
    │           ┬  
    │           ╰── Expected top-level declaration, found '}'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found '}'
    ╭─[ 0:31:1 ]
    │
 31 │ }
    │ ┬  
    │ ╰── Expected top-level declaration, found '}'
    │ 
    │ Note: Error code: E0010
────╯
